# Attendance-System

./: README.md
hdc1080/hdc1080_cpp/: CMakeLists.txt
hdc1080/hdc1080_cpp/src/: main.cpp
hdc1080/hdc1080cpp/: CMakeLists.txt
hdc1080/hdc1080cpp/src/: main.cpp
main_code/: CMakeLists.txt  main_backup_before_renovation.cpp
main_code/src/: HDC1080.cpp  HDC1080.h  MFRC522.cpp  MFRC522.h  TArcface.cpp  TRetina.cpp  TRetina.h  TWarp.cpp  face.cpp  kmeans.cpp  main.cpp
qt/: CMakeLists.txt  qt_example.cpp
rc522/MFRC-Py/: demoMDD.py
server_code/: server.js
server_code/controllers/: controller.js
server_code/model/: environment.js  rfid.js
server_code/routes/: route.js
